postgres/default/openebs/tls-server/l4-gw.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: postgres-tls-passthrough-gw
  namespace: postgres
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.3.111 # 分配一个独立的独立 IP
  listeners:
    - name: db-tls-listener
      port: 5432          # 外部客户端连接的统一端口
      protocol: TLS       # 核心：使用纯 L4 TLS 协议
      tls:
        mode: Passthrough # 核心：穿透模式，网关不终结 TLS
      allowedRoutes:
        namespaces:
          from: All       # 允许跨命名空间的 TLSRoute 绑定
