postgres/default/openebs/tls-server/tls-route.yml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: pg-dev-route
  namespace: postgres
spec:
  parentRefs:
    - name: postgres-tls-passthrough-gw
      sectionName: db-tls-listener
  hostnames:
    - "pg-dev.app.com"             # SNI 域名
  rules:
    - backendRefs:
        - name: postgres-service  # 转发到测试库的 Service
          namespace: postgres      # 核心细节：指明后端服务在 postgres 命名空间
          port: 5432
#---
#apiVersion: gateway.networking.k8s.io/v1alpha2
#kind: TLSRoute
#metadata:
#  name: pg-prod-route
#  namespace: postgres
#spec:
#  parentRefs:
#    - name: postgres-tls-passthrough-gw # 绑定上面的网关
#      sectionName: db-tls-listener
#  hostnames:
#    - "pg-prod.app.com"            # 核心：通过客户端传来的 SNI 域名进行分流
#  rules:
#    - backendRefs:
#        - name: postgres-prod-service # 转发到生产库的 Service
#          port: 5432
